Fix link contrast accessibility

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,6 +26,15 @@ h3 {
 h4 {
   color:#e1e7ef !important;
 }
+a {
+  color: #e1e7ef;
+  text-decoration: underline;
+}
+a:hover {
+  color: #d0ffff;
+  text-decoration: none;
+}
+
 a[href^="/"] {
   color: #e1e7ef;
 }
